overflow issue resolved, Navabar fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,7 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+
+html{
+  overflow-x: hidden;
+}
